--- a/facts.html
+++ b/facts.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vancouver Fan Site</title>
+    <title>Fun Facts About Vancouver</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="home-page">
+<body class="facts-page">
     <div>
         <nav class="navbar">
             <a href="index.html">Home</a>
@@ -14,10 +14,13 @@
             <a href="">Gallery</a>
         </nav>
     </div>
-    <div class="home-content-div">
-        <h1>Vancouver</h1>
-        <img src="https://images.unsplash.com/photo-1544161513-0179fe746fd5?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="50%" width="50%">
-        <p>Vancouver is a beautiful city in B.C. Canada. Explore this website to learn more!</p>
+    <div class="facts-content-div">
+        <h2>Here are some fun facts about the city of Vancouver</h2>
+        <ul>
+            <li>Vancouver has the 4th largest cruise ship terminal in the world</li>
+            <li>Vancouver's Stanley Park is 10% larger than Central Park in New York</li>
+            <li>Vancouver has one of the mildest climates in Canada</li>
+        </ul>
     </div>
     <footer>
         <p>Author: Al Li</p>
