--- a/gallery.html
+++ b/gallery.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun Facts About Minecraft</title>
+    <title>Get Started On Minecraft</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="facts-page">
+<body class="gallery-page">
     <div>
         <nav class="navbar">
             <a href="index.html">Home</a>
@@ -14,16 +14,16 @@
             <a href="gallery.html">Gallery</a>
         </nav>
     </div>
-    <div class="facts-content-div">
-        <h2>Here are some fun facts about Minecraft.</h2>
-        <ul>
-            <li>Minecraft was released in May 17, 2009.</li>
-            <li>Minecraft has 1 to 1.5 million players who play every day.</li>
-            <li>One day in Minecraft is 20 minutes in real-time.</li>
-        </ul>
+    <div class="gallery-content">
+        <h2>Here are some photos of Minecraft</h2>
+    </div>
+    <div class="gallery-content"></div>
+        <img src="" height="50%" width="50%">
+        <p>Minecraft is a very adventurous and fun game. Explore this site to
+            learn more</p>
     </div>
     <footer>
-        <p>Author: Al Li</p>
+        <p>Author: Al</p>
     </footer>
 </body>
 </html>
