--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vancouver Fan Site</title>
+    <title>Get Started On Minecraft</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="home-page">
@@ -11,16 +11,17 @@
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="facts.html">Fun Facts</a>
-            <a href="">Gallery</a>
+            <a href="gallery.html">Gallery</a>
         </nav>
     </div>
     <div class="home-content-div">
-        <h1>Vancouver</h1>
-        <img src="https://images.unsplash.com/photo-1544161513-0179fe746fd5?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="50%" width="50%">
-        <p>Vancouver is a beautiful city in B.C. Canada. Explore this website to learn more!</p>
+        <h1>Minecraft</h1>
+        <img src="" height="50%" width="50%">
+        <p>Minecraft is a very adventurous and fun game. Explore this site to
+            learn more</p>
     </div>
     <footer>
-        <p>Author: Al Li</p>
+        <p>Author: Al</p>
     </footer>
 </body>
 </html>
