--- a/gallery.html
+++ b/gallery.html
@@ -17,10 +17,10 @@
     <div class="gallery-content">
         <h2>Here are some photos of Minecraft</h2>
     </div>
-    <div class="gallery-content"></div>
-        <img src="" height="50%" width="50%">
-        <p>Minecraft is a very adventurous and fun game. Explore this site to
-            learn more</p>
+    <div class="gallery-content">
+        <button> < </button>
+        <img height="50%" width="50%">
+        <button> > </button>
     </div>
     <footer>
         <p>Author: Al</p>
