Added js variables

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="home-content-div">
         <h1>Minecraft</h1>
-        <img src="" height="50%" width="50%">
+        <img src="https://www.ionos.ca/digitalguide/fileadmin/DigitalGuide/Teaser/minecraft-server-hosten-t.jpg" height="50%" width="50%">
         <p>Minecraft is a very adventurous and fun game. Explore this site to
             learn more</p>
     </div>
