Coloring scheme added

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body class="home-page">
     <div>
         <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="facts.html">Fun Facts</a>
-            <a href="gallery.html">Gallery</a>
+            <a id="home-btn" href="index.html">Home</a>
+            <a id="facts-btn" href="facts.html">Fun Facts</a>
+            <a id="gallery-btn" href="gallery.html">Gallery</a>
         </nav>
     </div>
     <div class="home-content-div">
