--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="home-content-div">
         <h1>Minecraft</h1>
         <img src="https://www.ionos.ca/digitalguide/fileadmin/DigitalGuide/Teaser/minecraft-server-hosten-t.jpg" height="50%" width="50%">
-        <p>Minecraft is a very adventurous and fun game. Explore this site to
-            learn more</p>
+        <p>Minecraft is a very adventurous and fun game. It is a 3d exploration/survival game where you can make anything you want.  Explore this site to
+            learn more!</p>
     </div>
     <footer>
         <p>Author: Al</p>
