--- a/gallery.html
+++ b/gallery.html
@@ -9,13 +9,13 @@
 <body class="gallery-page">
     <div>
         <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="facts.html">Fun Facts</a>
-            <a href="gallery.html">Gallery</a>
+            <a id ="home-btn" href="index.html">Home</a>
+            <a id ="facts-btn" href="facts.html">Fun Facts</a>
+            <a id ="gallery-btn" href="gallery.html">Gallery</a>
         </nav>
     </div>
     <div class="gallery-content">
-        <h2>Here are some photos of Minecraft</h2>
+        <h2>Here are some photos of Minecraft!</h2>
     </div>
     <div class="gallery-content">
         <button id="prev-btn"> < </button>
