--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </nav>
     </div>
     <div class="home-content-div">
-        <h1>Minecraft</h1>
-        <img src="https://www.ionos.ca/digitalguide/fileadmin/DigitalGuide/Teaser/minecraft-server-hosten-t.jpg" height="50%" width="50%">
-        <p>Minecraft is a very adventurous and fun game. It is a 3d exploration/survival game where you can make anything you want.  Explore this site to
+        <h1></h1>
+        <img src="https://i.ytimg.com/vi/EFMDMTb9OR0/hqdefault.jpg" height="50%" width="%">
+        <p>Minecraft is an interactive, adventurous and fun game. It is a 3d exploration/survival game where you can make anything you want.  Explore this site to
             learn more!</p>
     </div>
     <footer>
